--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,6 +7,9 @@
 		<li>
 			<a href="#2a" data-toggle="tab">Top 10 Questions</a>
 		</li>
+		<li>
+			<a href="#3a" data-toggle="tab">History</a>
+		</li>
 	</ul>
 	<div class="tab-content clearfix">
 		<div class="tab-pane active" id="1a">
@@ -14,6 +17,9 @@
 		</div>
 		<div class="tab-pane" id="2a">
 			<top-questions></top-questions>
+		</div>
+		<div class="tab-pane" id="3a">
+			 <range-picker></range-picker>
 		</div>
 	</div>
 </div>
