--- a/src/app/components/tech-d3/tech-d3.component.css
+++ b/src/app/components/tech-d3/tech-d3.component.css
@@ -1,11 +1,3 @@
-#bar svg{
-    background-color: blueviolet;
-    margin: 0 auto;
-    display: block;
-    }
-
-    .line {
-  fill: none;
-  stroke: steelblue;
-  stroke-width: 2px;
+.bar{
+  cursor: pointer;
 }
